# egregore

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.relay.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
Memory/: activeContext.md  projectbrief.md  scratchpad.md  techEnvironment.md  workflowProtocols.md
adapters/: claude_code.py
docker/: Dockerfile.relay  docker-compose.relay.yml
docs/: README.md  architecture.md  operations.md  protocol.md
docs/api/: node-api.yaml  relay-api.yaml
docs/architecture/: README.md  api-surface-map.md  consumer-groups.md  events-and-hooks.md  feeds-and-query.md  identity-and-security.md  integration-api-and-mcp.md  mesh-health.md  mesh-replication.md  module-capability-index.md  peer-discovery.md  private-box.md  retention-and-lifecycle.md  schema-registry.md  selective-replication.md  storage-ownership.md  system-baseline.md
docs/design/: cli-publish.md
docs/diagrams/: network-architecture.puml
docs/features/: README.md  consumer-groups.md  events-and-hooks.md  feeds-and-query.md  gaps.md  identity-and-security.md  integration-api-and-mcp.md  mesh-health.md  mesh-replication.md  peer-discovery.md  private-box.md  retention-and-lifecycle.md  schema-registry.md  selective-replication.md
egregore-relay/: Cargo.toml
egregore-relay/src/: config.rs  eviction.rs  main.rs
egregore-relay/src/api/: mod.rs  routes_directory.rs  routes_feed.rs  routes_register.rs  routes_status.rs
example/docker/: Dockerfile  README.md
examples/: allowlist.example
examples/basic-hook/: README.md  config.yaml.example  on-message.sh
examples/claude-hook/: README.md  claude-agent-hook.py  claude-disciplined-hook.py  config.yaml.example  egregore-claude.service  egregore-claude.timer  poll-and-respond.sh
examples/docker/: Dockerfile  Dockerfile.local  README.md  config.yaml  docker-compose.yml
examples/ollama-hook/: README.md  config.yaml.example  ollama-hook.py
examples/openai-hook/: README.md  codex-hook.py  config.yaml.example  openai-hook.py
examples/openclaw-hook/: README.md  SKILL.md  config.yaml.example  openclaw-hook.py
examples/openclaw-skill/: SKILL.md
examples/openclaw-skill/scripts/: egregore.sh
examples/systemd/: README.md  egregore-update.service  egregore-update.timer  egregore.service
examples/watch-hook/: README.md  prompt.md
hooks/: allowlist.example  discord-notify.sh  on-message.sh
src/: cli_admin.rs  config.rs  config_template.yaml  error.rs  hooks.rs  lib.rs  main.rs  metrics.rs  status.rs  telemetry.rs
src/api/: mcp.rs  mcp_registry.rs  mcp_tools.rs  mod.rs  response.rs  routes_blobs.rs  routes_events.rs  routes_feed.rs  routes_follows.rs  routes_groups.rs  routes_identity.rs  routes_mesh.rs  routes_peers.rs  routes_publish.rs  routes_retention.rs  routes_schema.rs  routes_topics.rs  routes_transport.rs
src/blob/: mod.rs  store.rs
src/crypto/: box_stream.rs  handshake.rs  mod.rs  private_box.rs
src/feed/: content_types.rs  engine.rs  mod.rs  models.rs  private_box.rs  profile_lifecycle.rs  schema.rs  store.rs
src/feed/store/: groups.rs  health.rs  messages.rs  mod.rs  peers.rs  pending.rs  retention.rs
src/gossip/: backoff.rs  bloom.rs  client.rs  connection.rs  discovery.rs  flow_control.rs  health.rs  log_dedup.rs  mdns.rs  mod.rs  peers.rs  persistent.rs  push.rs  registry.rs  replication.rs  server.rs
src/identity/: encryption.rs  keys.rs  mod.rs  permissions.rs  signing.rs
src/pending/: mod.rs  scheduler.rs  store.rs
src/transport/: filter.rs  gossip.rs  health.rs  mod.rs  subscription.rs  trait_def.rs
src/transport/bus/: config.rs  consumer.rs  ingest.rs  mod.rs  subjects.rs  transport.rs
src/transport/composite/: direction.rs  egress.rs  health.rs  ingress.rs  mod.rs  transport.rs
tests/: api_test.rs  b8_cross_transport_dedup.rs  bus_integration_smoke.rs  engine_dedup_proptest.rs  gossip_test.rs  peer_profile_filter.rs  publish_dispatch_wiring.rs  security_test.rs  transport_endpoints.rs  transport_invariants_gossip.rs  transport_invariants_proptest.rs
tests/common/: mock_transport.rs  mod.rs
watch/: README.md  egregore-watch.sh
