[workspace]
members = ["."]

[package]
name = "egregore"
version = "1.0.0"
edition = "2021"
description = "SSB-inspired decentralized knowledge sharing for LLMs"
license = "MIT"
authors = ["pknull"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Signing / crypto
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
curve25519-dalek = { version = "4.1", features = ["serde"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TCP framing
tokio-util = { version = "0.7", features = ["codec"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.0"

# Self-update
self_update = { version = "0.39", features = ["archive-tar", "archive-zip", "compression-flate2"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# URL parsing
url = "2.5"

# Encoding
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Streaming
async-stream = "0.3"
futures = "0.3"

# HTTP client (for adapters/examples)
reqwest = { version = "0.12", features = ["json"] }

# Random
rand = "0.8"

# Bytes
bytes = "1.0"

# JSON Schema validation
jsonschema = "0.29"

# Concurrent hashmap for connection registry
dashmap = "6.0"

# URL encoding
urlencoding = "2.1"

# mDNS/Bonjour peer discovery
mdns-sd = "0.11"
hostname = "0.4"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
