[workspace]
members = ["."]

[package]
name = "egregore"
version = "1.2.4"
edition = "2021"
description = "SSB-inspired decentralized knowledge sharing for LLMs"
license = "MIT OR Apache-2.0"
authors = ["pknull"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Signing / crypto
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
curve25519-dalek = { version = "4.1", features = ["serde"] }
subtle = "2.6"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TCP framing
tokio-util = { version = "0.7", features = ["codec"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.0"

# Self-update
self_update = { version = "0.44", default-features = false, features = ["reqwest", "archive-tar", "archive-zip", "compression-flate2", "rustls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation for trace IDs
uuid = { version = "1.0", features = ["v4"] }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# URL parsing
url = "2.5"

# Encoding
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Streaming
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# HTTP client (for adapters/examples)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Random
rand = "0.8"

# Bytes
bytes = "1.0"

# JSON Schema validation
jsonschema = "0.29"

# Concurrent hashmap for connection registry
dashmap = "6.0"

# NATS JetStream client (Phase 2 bus transport)
# `nkeys` feature is required for credentials-file authentication (RL3).
async-nats = { version = "0.47", default-features = false, features = ["jetstream", "server_2_11", "nkeys"] }

# Non-poisoning synchronization primitives
parking_lot = "0.12"

# URL encoding
urlencoding = "2.1"

# mDNS/Bonjour peer discovery
mdns-sd = "0.11"
hostname = "0.4"
hex = "0.4"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# OpenTelemetry (optional, feature-gated)
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otlp = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
