[package]
name = "egregore-relay"
version = "0.1.0"
edition = "2021"
description = "Relay server for Egregore network"
license = "MIT"
authors = ["pknull"]

[dependencies]
egregore = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
base64 = "0.22"
